--- a/index.html
+++ b/index.html
@@ -3,27 +3,127 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Auto Ride App</title>
-  <link rel="stylesheet" href="style.css">
+  <title>Auto Service App</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      background: linear-gradient(to right, #74ebd5, #ACB6E5);
+    }
+    .container {
+      text-align: center;
+      background: #fff;
+      padding: 50px 60px;
+      border-radius: 20px;
+      box-shadow: 0 8px 30px rgba(0,0,0,0.2);
+      max-width: 500px;
+    }
+    h1 {
+      font-size: 32px;
+      color: #333;
+      margin-bottom: 10px;
+    }
+    p {
+      font-size: 16px;
+      color: #555;
+      margin-bottom: 20px;
+    }
+    .button-container button {
+      padding: 15px 35px;
+      margin: 0 15px;
+      border: none;
+      border-radius: 12px;
+      background-color: #007BFF;
+      color: #fff;
+      font-size: 16px;
+      cursor: pointer;
+      transition: all 0.3s ease;
+    }
+    .button-container button:hover {
+      background-color: #0056b3;
+      transform: translateY(-3px);
+      box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+    }
+    .signup-form {
+      display: none;
+      margin-top: 20px;
+      text-align: left;
+    }
+    .signup-form input {
+      display: block;
+      width: 100%;
+      padding: 10px;
+      margin: 10px 0;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+    }
+    .signup-form button {
+      width: 100%;
+    }
+  </style>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-database-compat.js"></script>
 </head>
 <body>
-  <header>
-    <h1>Welcome to Auto Ride App</h1>
-    <p>Choose your role to continue</p>
-  </header>
-
-  <main>
-    <div class="role-card" onclick="goToSignup('passenger')">
-      <h2>Passenger</h2>
-      <p>Book rides and track drivers in real-time</p>
+  <div class="container">
+    <h1>Welcome to Auto Service</h1>
+    <p>Your reliable auto service platform for drivers and passengers.</p>
+    <div class="button-container">
+      <button id="driverBtn">Driver</button>
+      <button id="passengerBtn">Passenger</button>
     </div>
 
-    <div class="role-card" onclick="goToSignup('driver')">
-      <h2>Driver</h2>
-      <p>Accept rides and manage your earnings</p>
+    <div class="signup-form" id="passengerForm">
+      <h2>Passenger Signup</h2>
+      <input type="text" id="passengerName" placeholder="Name">
+      <input type="text" id="pickupLocation" placeholder="Pickup Location">
+      <input type="text" id="dropLocation" placeholder="Drop Location">
+      <button id="signupBtn">Sign Up</button>
     </div>
-  </main>
+  </div>
 
-  <script src="app.js"></script>
+  <script>
+    const firebaseConfig = {
+      apiKey: "AIzaSyC7y4VIDIS8z4VBQ4Hmw5zyoognJ-zc3v0",
+      authDomain: "auto-help-a68b9.firebaseapp.com",
+      databaseURL: "https://auto-help-a68b9-default-rtdb.firebaseio.com",
+      projectId: "auto-help-a68b9",
+      storageBucket: "auto-help-a68b9.firebasestorage.app",
+      messagingSenderId: "488239907587",
+      appId: "1:488239907587:web:0c2b30a8f0df735fd1df36"
+    };
+
+    firebase.initializeApp(firebaseConfig);
+    const database = firebase.database();
+
+    document.getElementById('driverBtn').addEventListener('click', function() {
+      alert('Driver page will open soon.');
+    });
+
+    document.getElementById('passengerBtn').addEventListener('click', function() {
+      document.getElementById('passengerForm').style.display = 'block';
+    });
+
+    document.getElementById('signupBtn').addEventListener('click', function() {
+      const name = document.getElementById('passengerName').value;
+      const pickup = document.getElementById('pickupLocation').value;
+      const drop = document.getElementById('dropLocation').value;
+
+      if(name && pickup && drop) {
+        const newPassengerRef = database.ref('passengers').push();
+        newPassengerRef.set({ name, pickupLocation: pickup, dropLocation: drop });
+        alert('Passenger registered successfully!');
+        document.getElementById('passengerName').value = '';
+        document.getElementById('pickupLocation').value = '';
+        document.getElementById('dropLocation').value = '';
+      } else {
+        alert('Please fill all fields');
+      }
+    });
+  </script>
 </body>
 </html>
