--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Restaurant E-Commerce</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
+  <!-- Auto Navbar -->
+  <script src="js/navbar.js"></script>
+
+  <!-- Main Content -->
+  <main>
+    <section class="hero">
+      <h1>Welcome to Our Restaurant</h1>
+      <p>Delicious meals delivered to your door 🍕🍔🍲</p>
+      <a href="menu.html" class="btn">Order Now</a>
+    </section>
+
+    <section class="features">
+      <h2>Why Choose Us?</h2>
+      <ul>
+        <li>Fresh Ingredients</li>
+        <li>Fast Delivery</li>
+        <li>Easy Online Ordering</li>
+        <li>Special Discounts & Offers</li>
+      </ul>
+    </section>
+
+    <section class="about">
+      <h2>About Our Restaurant</h2>
+      <p>We serve delicious meals made with love and fresh ingredients. Enjoy a seamless online ordering experience and have your favorite food delivered to your doorstep!</p>
+      <a href="about.html" class="btn">Learn More</a>
+    </section>
+  </main>
+
+  <!-- Auto Footer -->
+  <script src="js/footer.js"></script>
+
+</body>
+</html>
